[package]
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "Parity Technologies <admin@parity.io>"]
description = "Implementation of the multiaddr format"
edition = "2021"
rust-version = "1.59.0"
repository = "https://github.com/multiformats/rust-multiaddr"
keywords = ["multiaddr", "ipfs"]
license = "MIT"
name = "multiaddr"
readme = "README.md"
version = "0.18.3"

[features]
default = ["url"]

[dependencies]
arrayref = "0.3"
byteorder = "1.5.0"
bytes = "1.7.2"
data-encoding = "2.6.0"
multibase = "0.9.1"
multihash = "0.19"
percent-encoding = "2.3.1"
serde = "1.0.209"
static_assertions = "1.1"
unsigned-varint = "0.8"
url = { version = "2.5.0", optional = true, default-features = false }
libp2p-identity = { version = "0.2.9", features = ["peerid"] }

[dev-dependencies]
bincode = "1"
quickcheck = { version = "1.0.3", default-features = false }
rand = "0.8.5"
serde_json = "1.0"

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
